--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 <section id="projects" class="section dark reveal">
   <h2>Projects</h2>
 
+  <!-- Project 1 -->
   <div class="project-card">
-    <h3>🦴 Knee Osteoarthritis Detection</h3>
+    <h3> Knee Osteoarthritis Detection</h3>
     <p>
       AI-powered system that predicts Knee OA severity from X-ray images
       using CNN (AlexNet) with a full-stack dashboard.
@@ -81,7 +82,31 @@
       View on GitHub →
     </a>
   </div>
+
+  <!-- Project 2 -->
+  <div class="project-card">
+    <h3> Emotion Detection Using Streamlit</h3>
+    <p>
+      Emotion Detection is an Artificial Intelligence application that identifies
+      a person’s emotional state from facial expressions using Deep Learning and
+      Computer Vision techniques.
+    </p>
+    <a href="https://github.com/ben120405/emotion-detection-streamlit" target="_blank">
+      View on GitHub →
+    </a>
+  </div>
+
+  <!-- Project 3 -->
+  <div class="project-card">
+    <h3> Automatic Rain Sensing Wipers using Arduino</h3>
+    <p>
+      Developed an Automatic Rain Sensing Wiper system using Arduino that
+      automatically adjusts wiper speed based on rainfall intensity.
+    </p>
+  </div>
+
 </section>
+
 
 <section id="contact" class="section glass reveal">
   <h2>Contact Me</h2>
